# platformer-uwo

./: .gitignore  Animate.cpp  Animate.h  CMakeLists.txt  Coin.cpp  Coin.h  Enemy.cpp  Enemy.h  Goal.cpp  Goal.h  Interface.cpp  Interface.h  Level.cpp  Level.h  Menu.cpp  Menu.h  Object.cpp  Object.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  README.md  Score.cpp  Score.h  Terrain.cpp  Terrain.h  User.cpp  User.h  collisions.cpp  collisions.h  main.cpp  obstacles.cpp  obstacles.h  readme.md
